Fix components too big

--- a/sphinx_scylladb_theme/static/css/main.css
+++ b/sphinx_scylladb_theme/static/css/main.css
@@ -8900,6 +8900,9 @@ table.thead-border thead tr th:last-child {
     margin-bottom: 60px;
   }
   .topic-box .card .topic-box__body p {
+    min-height: 56px;
+  }
+  .topic-box--min-3-lines .topic-box__body p {
     min-height: 84px;
   }
   .topic-box--product .card .topic-box__body p {
